preload flag images so they don't blink the first time

--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,7 @@ li .num {
 
 .af { background-image: url('/img/noise.png'), url('/img/af.png'); }
 .sq { background-image: url('/img/noise.png'), url('/img/sq.png'); }
-.ar { background-image: url('/img/noise.png'), url('/img/ar2.png'); }
+.ar { background-image: url('/img/noise.png'), url('/img/ar.png'); }
 .hy { background-image: url('/img/noise.png'), url('/img/hy.png'); }
 .az { background-image: url('/img/noise.png'), url('/img/az.png'); }
 .eu { background-image: url('/img/noise.png'), url('/img/eu.png'); }
